# api/src/main/java/dev/thiagooliveira/syncmoney/infra/account/api/mapper/BankMapper.java
@@ -2,7 +2,7 @@ package dev.thiagooliveira.syncmoney.infra.account.api.mapper;
 
 import dev.thiagooliveira.syncmoney.core.account.application.dto.CreateBankInput;
 import dev.thiagooliveira.syncmoney.core.account.domain.model.Bank;
-import dev.thiagooliveira.syncmoney.core.account.domain.model.Currency;
+import dev.thiagooliveira.syncmoney.core.shared.domain.model.Currency;
 import dev.thiagooliveira.syncmoney.infra.account.api.dto.GetBanksResponseBody;
 import dev.thiagooliveira.syncmoney.infra.account.api.dto.PostBankRequestBody;
 import dev.thiagooliveira.syncmoney.infra.account.api.dto.PostBankResponseBody;
