# api/src/main/java/dev/thiagooliveira/syncmoney/infra/account/persistence/entity/BankEntity.java
@@ -2,7 +2,7 @@ package dev.thiagooliveira.syncmoney.infra.account.persistence.entity;
 
 import dev.thiagooliveira.syncmoney.core.account.application.dto.CreateBankInput;
 import dev.thiagooliveira.syncmoney.core.account.domain.model.Bank;
-import dev.thiagooliveira.syncmoney.core.account.domain.model.Currency;
+import dev.thiagooliveira.syncmoney.core.shared.domain.model.Currency;
 import dev.thiagooliveira.syncmoney.core.shared.domain.model.event.account.BankCreatedEvent;
 import jakarta.persistence.*;
 import java.util.UUID;
