# api/src/main/java/dev/thiagooliveira/syncmoney/infra/transaction/api/SummaryRestController.java
@@ -2,38 +2,38 @@ package dev.thiagooliveira.syncmoney.infra.transaction.api;
 
 import dev.thiagooliveira.syncmoney.core.transaction.application.service.AccountSummaryService;
 import dev.thiagooliveira.syncmoney.infra.security.service.UserAuthenticated;
-import dev.thiagooliveira.syncmoney.infra.transaction.api.mapper.AccountSummaryMapper;
-import dev.thiagooliveira.syncmoney.infra.transactions.api.AccountsSummaryApi;
-import dev.thiagooliveira.syncmoney.infra.transactions.api.dto.GetAccountSummaryResponseBody;
+import dev.thiagooliveira.syncmoney.infra.transaction.api.mapper.SummaryMapper;
+import dev.thiagooliveira.syncmoney.infra.transactions.api.SummaryApi;
+import dev.thiagooliveira.syncmoney.infra.transactions.api.dto.PostSummaryRequestBody;
+import dev.thiagooliveira.syncmoney.infra.transactions.api.dto.PostSummaryResponseBody;
 import java.time.LocalDate;
 import java.time.YearMonth;
-import java.util.UUID;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
-public class AccountSummaryRestController implements AccountsSummaryApi {
+public class SummaryRestController implements SummaryApi {
 
   private final AccountSummaryService accountSummaryService;
-  private final AccountSummaryMapper accountSummaryMapper;
+  private final SummaryMapper summaryMapper;
 
-  public AccountSummaryRestController(
-      AccountSummaryService accountSummaryService, AccountSummaryMapper accountSummaryMapper) {
+  public SummaryRestController(
+      AccountSummaryService accountSummaryService, SummaryMapper summaryMapper) {
     this.accountSummaryService = accountSummaryService;
-    this.accountSummaryMapper = accountSummaryMapper;
+    this.summaryMapper = summaryMapper;
   }
 
   @Override
-  public ResponseEntity<GetAccountSummaryResponseBody> getSummaryByAccountId(
-      UUID accountId, LocalDate yearMonth) {
+  public ResponseEntity<PostSummaryResponseBody> postSummary(
+      LocalDate yearMonth, PostSummaryRequestBody postSummaryRequestBody) {
     UserAuthenticated principal =
         (UserAuthenticated) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
     return ResponseEntity.ok(
-        this.accountSummaryMapper.mapToGetAccountSummaryResponseBody(
-            this.accountSummaryService.getSummary(
+        this.summaryMapper.mapToPostSummaryResponseBody(
+            this.accountSummaryService.getAggregateSummary(
                 principal.getOrganizationId(),
-                accountId,
+                postSummaryRequestBody.getAccountIds(),
                 YearMonth.of(yearMonth.getYear(), yearMonth.getMonth()))));
   }
 }
